--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "electron": "github:castlabs/electron-releases#v11.5.0-wvvmp"
   },
   "dependencies": {
-    "@cliqz/adblocker": "github:meforce/cliqz-adblocker-castlabs-electron#v1.22.7",
+    "@cliqz/adblocker": "github:meforce/cliqz-adblocker-castlabs#v1.22.7",
     "@cliqz/adblocker-electron-preload": "github:meforce/cliqz-adblocker-castlabs-electron-preload#v1.22.7",
     "tldts-experimental": "^5.6.21"
   },
@@ -45,7 +45,7 @@
     "@types/chai": "^4.2.18",
     "@types/mocha": "^9.0.0",
     "chai": "^4.2.0",
-    "electron": "^15.0.0",
+    "electron": "github:castlabs/electron-releases#v11.5.0-wvvmp",
     "mocha": "^9.0.0",
     "nyc": "^15.0.0",
     "rimraf": "^3.0.0",
