--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test": "nyc mocha --config ../../.mocharc.js"
   },
   "peerDependencies": {
-    "electron": "github:castlabs/electron-releases#v11.5.0-wvvmp"
+    "electron": "github:meforce/electron#11.5.0-wvvmp"
   },
   "dependencies": {
     "@cliqz/adblocker": "github:meforce/cliqz-adblocker-castlabs#v1.22.7",
@@ -45,7 +45,7 @@
     "@types/chai": "^4.2.18",
     "@types/mocha": "^9.0.0",
     "chai": "^4.2.0",
-    "electron": "github:castlabs/electron-releases#v11.5.0-wvvmp",
+    "electron": "github:meforce/electron#11.5.0-wvvmp",
     "mocha": "^9.0.0",
     "nyc": "^15.0.0",
     "rimraf": "^3.0.0",
